--- a/MonkeySeeMonkeyDo/Views/Home/Privacy.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/Privacy.cshtml
@@ -1,6 +1,14 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "About Chaotic Studios";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Austin is stealing your data.</p>
+<div>
+    <h2> Monkey See Monkey Do Games: </h2>
+    <p1>
+        🐵 Our goal here as a project team has been to broaden our eyes to new experiences. 
+        Our first project as Chaotic set our sights on creating more games, and we decided to create a website along with that to show our games. 
+    </p1>
+</div>
+
+
