--- a/MonkeySeeMonkeyDo/Views/Home/Privacy.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/Privacy.cshtml
@@ -6,7 +6,7 @@
 <div>
     <h2> Monkey See Monkey Do Games: </h2>
     <p1>
-        🐵 Our goal here as a project team has been to broaden our eyes to new experiences. 
+         || Our goal here as a project team has been to broaden our eyes to new experiences. 
         Our first project as Chaotic set our sights on creating more games, and we decided to create a website along with that to show our games. 
     </p1>
 </div>
