--- a/MonkeySeeMonkeyDo/Views/Shared/_Layout.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Shared/_Layout.cshtml
@@ -1,4 +1,19 @@
 ﻿<!DOCTYPE html>
+@*.first-color {
+	background: #f7f7f7;
+}
+
+.second-color {
+	background: #393e46;
+}
+
+.third-color {
+	background: #5c636e;
+}
+
+.fourth-color {
+	background: #f8b500;
+}*@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -7,17 +22,17 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body style="background-color:khaki">
-    <header style="background-color:gold">
+<body style="background-color: #393e46; color: #f7f7f7" >
+    <header style="background-color: #5c636e ">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-transparent border-bottom box-shadow mb-3">
-            <div class="container">
+            <div class="container" style="color: #f7f7f7">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MonkeySeeMonkeyDo</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between" >
+                    <ul class="navbar-nav flex-grow-1" >
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -35,8 +50,8 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="background-color:palegoldenrod">
-        <div class="container">
+    <footer class="border-top footer text-dark" style="background-color: #5c636e">
+        <div class="container" style="color: #f7f7f7">
             &copy; @DateTime.Today.Year - MonkeySeeMonkeyDo - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
