--- a/MonkeySeeMonkeyDo/wwwroot/css/styles.css
+++ b/MonkeySeeMonkeyDo/wwwroot/css/styles.css
@@ -59,15 +59,27 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    background-color: #393e46;
+    color: #f7f7f7;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #5c636e;
+    color: #f7f7f7;
+}
+header {
+    background-color: #5c636e;
+    color: #f7f7f7;
+}
+
+div {
+    color: #f7f7f7;
 }
 
 /*Colors added by me*/
