--- a/MonkeySeeMonkeyDo/Views/Shared/_Layout.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <title>@ViewData["Title"] - Monkey See Monkey Do</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
+    <script src="~/js/phaser.js"></script>
 </head>
 <body style="background-color: #393e46; color: #f7f7f7" >
     <header style="background-color: #5c636e ">
