--- a/MonkeySeeMonkeyDo/Views/Shared/_Layout.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Shared/_Layout.cshtml
@@ -20,20 +20,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Monkey See Monkey Do</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-<<<<<<< HEAD
     <link rel="stylesheet" href="~/css/site.css" />
-    <script src="~/js/phaser.js"></script>
-=======
     <link rel="stylesheet" href="~/css/styles.css" />
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
->>>>>>> 5ed919f9dfe7802d103415e00b1bf5e778c9a533
+    <script src="~/js/phaser.js"></script>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-transparent border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MonkeySeeMonkeyDo</a>
-                <img src="~/Images/pixel-monkey.png" height="40" width="40" />
+                <img src="~/Images/monkey.png" height="40" width="40" />
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
