fixed about page.

--- a/MonkeySeeMonkeyDo/wwwroot/css/styles.css
+++ b/MonkeySeeMonkeyDo/wwwroot/css/styles.css
@@ -61,7 +61,7 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
-    color: #f7f7f7;
+    color: #719192;
     background-image: url(../Images/Chain/Chain_Banana.png);
     background-size: 100px;
     background-repeat: repeat;
