--- a/MonkeySeeMonkeyDo/Views/Home/Privacy.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/Privacy.cshtml
@@ -3,7 +3,8 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<div>
+
+<div style="background-color: #393e46; width:stretch" >
     <h2> Monkey See Monkey Do Games: </h2>
     <p1>
          || Our goal here as a project team has been to broaden our eyes to new experiences. 
