--- a/MonkeySeeMonkeyDo/Views/Home/BananaRun.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/BananaRun.cshtml
@@ -3,5 +3,8 @@
 *@
 @{
 }
-<canvas id="game" width="640" height="400"></canvas>
-<script src="~/js/MonkeyBananaRun.js"></script>
+<div id="game" class="text-center bg-white">
+    <canvas id="Canvas" width="640" height="400"></canvas>
+    <script src="~/js/MonkeyBananaRun.js"></script>
+</div>
+
