added start for TTT

--- a/MonkeySeeMonkeyDo/Views/Home/TicTacToe.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/TicTacToe.cshtml
@@ -1,5 +1,17 @@
 ﻿@*
-    
+
 *@
 @{
 }
+
+<!doctype html>
+<html>
+<head>
+    <title>Tic-Tac-Toe</title>
+    <script src="~/js/phaser.min.js"></script>
+    <script src="~/js/ttt.js"></script>
+</head>
+<body>
+    <div id='gameDiv'></div>
+</body>
+</html>
