--- a/MonkeySeeMonkeyDo/Views/Home/MonkeySnake.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/MonkeySnake.cshtml
@@ -7,7 +7,11 @@
 </div>
 
 <div id="Game" class="text-center">
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <canvas id="gameCanvas" width="800" height="600">
+    </canvas>
+
+   
+
     <script src="~/js/MonkeyChain.js"></script>
-    
+
 </div>
