--- a/MonkeySeeMonkeyDo/Views/Home/Index.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/Index.cshtml
@@ -5,3 +5,7 @@
 <div class="text-center">
     <h1 class="display-4">ඞ a mongoose</h1>
 </div>
+
+<div>
+    <script src="~/js/MonkeySwing.js"></script>
+</div>
