--- a/MonkeySeeMonkeyDo/Views/Shared/_Layout.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="BananaRun">Banana Run</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Create">Create an account</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UserAccounts" asp-action="Create">Create an account</a>
                         </li>
                     </ul>
                 </div>
