--- a/MonkeySeeMonkeyDo/wwwroot/css/styles.css
+++ b/MonkeySeeMonkeyDo/wwwroot/css/styles.css
@@ -90,6 +90,9 @@ p1 {
     background-color: #393e46
 }
 
+.pogGame {
+    background-image: url("Images/Run/ENDMYLIFEPLEASE.png");
+}
 
 /*Colors added by me*/
 
