Making Banana Background More Palatable

--- a/MonkeySeeMonkeyDo/Views/Home/Privacy.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/Privacy.cshtml
@@ -3,13 +3,14 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-
-<div style="background-color: #393e46; width:stretch" >
+<div class="row">
+    <div class="col-6" >
     <h2> Monkey See Monkey Do Games: </h2>
     <p1>
-         || Our goal here as a project team has been to broaden our eyes to new experiences. 
+        Our goal here as a project team has been to broaden our eyes to new experiences. 
         Our first project as Chaotic set our sights on creating more games, and we decided to create a website along with that to show our games. 
     </p1>
+    </div>
 </div>
 
 
