--- a/MonkeySeeMonkeyDo/Views/Home/Privacy.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/Privacy.cshtml
@@ -8,8 +8,45 @@
     <h2> Monkey See Monkey Do Games: </h2>
     <p1>
         Our goal here as a project team has been to broaden our eyes to new experiences. 
-        Our first project as Chaotic set our sights on creating more games, and we decided to create a website along with that to show our games. 
+        Our first porject as an official team is to bring our love of video games to a website
+        utilizing a sweet and lovable theme for all of our users to enjoy. The team has worked tirelessly 
+        for the last 5 weeks to bring this website to life with several games, an account creator, and
+        a leaderboard that is connected between each account and game so users can brag about how great they
+        are at our games. We hope you enjoy and make the most out of your say here!
     </p1>
+    </div>
+</div>
+<div class="row">
+    <div class="col-6 text-center" >
+        <h1>Meet our team!</h1>
+        <h3>Mark Nusser</h3>
+        <p1>Mark is a second year Software and Game Development student at Neumont College of Computer Science.
+        Over the last few months Mark has been a striving force in the esports department by being a captain for
+        the League of Legends team and casting for each match that Neumont has each week. Approaching his third
+        academic year this upcoming quarter, Mark has created many projects he is proud of, one of which he has
+        recently entered into project showcase 2022. Mark's dream job is to be able to work for a AAA game company
+        and be able to create the colorful and amazing worlds that helped him escape the stress of the world
+        when he was younger. Mark hopes you enjoy MonkeySeeMonkeyDo!</p1>
+    </div>
+    <div class="col-6 text-center">
+        <h3>Martin Margolin</h3>
+        <p1></p1>
+    </div>
+</div>
+<div class="row">
+    <div class="col-6 text-center">
+        <h3>Austin McKinney</h3>
+        <p1></p1>
+    </div>
+    <div class="col-6 text-center">
+        <h3>Logan Bailey</h3>
+        <p1></p1>
+    </div>
+</div>
+<div class="row">
+    <div class="col-6 text-center">
+        <h3>Nicolas Ries</h3>
+        <p1></p1>
     </div>
 </div>
 
