--- a/MonkeySeeMonkeyDo/Views/Home/Privacy.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/Privacy.cshtml
@@ -30,7 +30,12 @@
     </div>
     <div class="col-6 text-center">
         <h3>Martin Margolin</h3>
-        <p1></p1>
+        <p1>Martin is a second year BSGD student and Neumont College of Computer Science. 
+            Over the course of his time at Neumont, he has strived to show his creativity 
+            and humor as a means to drive his development and creative process. He is a current player 
+            for the college's League Of Legends eSports Varsity team, and wants to take that further and
+            hopefully work for League's company, Riot Games when he graduates. His goal here at MonkeySeeMonkeyDo
+            is to play around with his creativity and create games that inspire bored minds!</p1>
     </div>
 </div>
 <div class="row">
