Starting out the layout for index

--- a/MonkeySeeMonkeyDo/Views/Home/Index.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/Index.cshtml
@@ -5,5 +5,15 @@
 <div class="text-center">
     <img src="~/images/Title.png" />
 
+    <div class="row">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4"></div>
+    </div>
 
+    <div class="row">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4"></div>
+    </div>
 </div>
