--- a/MonkeySeeMonkeyDo/Views/Home/Index.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/Index.cshtml
@@ -6,14 +6,20 @@
     <img src="~/images/Title.png" />
 
     <div class="row">
-        <div class="col-sm-4"></div>
-        <div class="col-sm-4"></div>
-        <div class="col-sm-4"></div>
-    </div>
+        <div class="col-sm-4 gameBox">MODEL GAME</div>
+        <div class="col-sm-4 gameBox">MODEL GAME</div>
+        <div class="col-sm-4 gameBox">MODEL GAME</div>
+    </div> <br />
 
     <div class="row">
-        <div class="col-sm-4"></div>
-        <div class="col-sm-4"></div>
-        <div class="col-sm-4"></div>
-    </div>
+        <div class="col-sm-4 gameBox">MODEL GAME</div>
+        <div class="col-sm-4 gameBox">MODEL GAME</div>
+        <div class="col-sm-4 gameBox">MODEL GAME</div>
+    </div> <br />
+
+    <div class="row">
+        <div class="col-sm-4 gameBox">MODEL GAME</div>
+        <div class="col-sm-4 gameBox">MODEL GAME</div>
+        <div class="col-sm-4 gameBox">MODEL GAME</div>
+    </div> <br />
 </div>
