Monkey Swing Complete (Now with title screen)

--- a/MonkeySeeMonkeyDo/Views/Home/MonkeySwing.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/MonkeySwing.cshtml
@@ -3,5 +3,6 @@
 }
 
 <div>
-    <script src="~/js/MonkeySwing/Game.js"></script>
+    <script type="module" src="../js/MonkeySwing/TitleScene.js"></script>
+    <script type="module" src="../js/MonkeySwing/Game.js"></script>
 </div>
