Home page pt. 1

--- a/MonkeySeeMonkeyDo/Views/Home/BananaRun.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/BananaRun.cshtml
@@ -3,7 +3,7 @@
 *@
 @{
 }
-<div id="game" class="text-center bg-dark">
+<div id="game" class="text-center bg-light">
     <canvas id="Canvas" width="640" height="400"></canvas>
     <script src="~/js/MonkeyBananaRun.js"></script>
 </div>
