--- a/MonkeySeeMonkeyDo/Views/Home/Index.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/Index.cshtml
@@ -5,5 +5,19 @@
 <div class="text-center">
     <img src="~/images/Title.png" />
 
+<div class="row">
+    <div class="col-6 text-center">
+        <h3>Monkey Snake</h3>
+        <a asp-controller="Home" asp-action="MonkeySnake"><img src="~/images/monkeychainss.jpg" id="gameSize" /></a>
+        <p1>Try out everyone's favorite game of snake, now in monkey form!'</p1>
+    </div>
+    <div class="col-6 text-center">
+        <h3>Super Monkey Banana Run!</h3>
+        <a asp-controller="Home" asp-action="BananaRun"><img src="~/images/MonkeyRunImage.jpg" id="runSize" /></a>
+        <p1>The evil Doctor Derpington has chimp napped our mascot Momo! Momo believe's he is escaping but
+        doesn't realize he is actually on a conveyer belt full of banana pallets! Keep him out of harm for
+        as long as you can!</p1>
+    </div>
+</div>
 
 </div>
