--- a/MonkeySeeMonkeyDo/wwwroot/css/site.css
+++ b/MonkeySeeMonkeyDo/wwwroot/css/site.css
@@ -34,6 +34,11 @@ a {
     position: center;
 }
 
+#swingSize {
+    width: 550px;
+    position: center;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
