--- a/MonkeySeeMonkeyDo/Views/Home/Privacy.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/Privacy.cshtml
@@ -41,7 +41,12 @@
 <div class="row">
     <div class="col-6 text-center">
         <h3>Austin McKinney</h3>
-        <p1></p1>
+        <p1>
+            Austin is a second year Software and Game Development student at Neumont College of Computer Science.
+            Over the course of his time at Neumont, he has created many a game and many a failure. All have been fun
+            projects that he is proud of. Austin is a happy member of the Monkey Crew who tried hard to make a game that
+            satisfies the gamer that loves games. His goal is to be able to make games that the world can also enjoy.
+        </p1>
     </div>
     <div class="col-6 text-center">
         <h3>Logan Bailey</h3>
