--- a/MonkeySeeMonkeyDo/Views/Home/Index.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/Index.cshtml
@@ -21,6 +21,9 @@
         </p1>
     </div>
 </div>
+    <div class="row">
+
+    </div>
 <div class="row">
     <div class="col-6 text-center">
         <h3>Monkey Swing</h3>
@@ -31,7 +34,10 @@
     </div>
     <div class="col-6 text-center">
         <h3>Monkey Tic-Tac-Toe</h3>
-        <p1></p1>
+        <a asp-controller="Home" asp-action="TicTacToe"><img src="~/images/TickityTackityToe.jpg" id="TTTSize" /></a>
+        <p> </p>
+        <p1>Momo challenges you to find a friend and duel for the glory off all the bananas in the world! Battle until
+        your muscles can barely support you anymore in the most challenging war you have ever experienced!</p1>
     </div>
 </div>
 
