--- a/MonkeySeeMonkeyDo/Views/Home/About.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/About.cshtml
@@ -56,7 +56,9 @@
 <div class="row">
     <div class="col-6 text-center">
         <h3>Nicolas Ries</h3>
-        <p1></p1>
+        <p1>
+            Nicolas Wants to die.
+        </p1>
     </div>
 </div>
 
