added about for Logan.

--- a/MonkeySeeMonkeyDo/Views/Home/About.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/About.cshtml
@@ -50,14 +50,21 @@
     </div>
     <div class="col-6 text-center">
         <h3>Logan Bailey</h3>
-        <p1></p1>
+        <p1>
+            Logan is a second year BSGD student at Neumont College of Computer Science.
+            Over the course of his time at Neumont, he has created many friends, and just as many functional games.
+            He curently is working as an RA for Neumont, and he loves his job very much. He never complains about it at all. It is his dream job.
+            He is dropping out of College to be a College RA.
+            He likes playing Dnd in his free time so that he can murder children. He is funny monkey man.
+        </p1>
     </div>
 </div>
 <div class="row">
     <div class="col-6 text-center">
         <h3>Nicolas Ries</h3>
         <p1>
-            Nicolas Wants to die.
+            @*Nicolas Wants to die.*@ Nicolas is a second year Software and Game Development student at Neumont College of Computer Science.
+            He 
         </p1>
     </div>
 </div>
