Leaderboard is dead

--- a/MonkeySeeMonkeyDo/Views/Home/About.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/About.cshtml
@@ -11,8 +11,8 @@
         Our first porject as an official team is to bring our love of video games to a website
         utilizing a sweet and lovable theme for all of our users to enjoy. The team has worked tirelessly 
         for the last 5 weeks to bring this website to life with several games, an account creator, and
-        a leaderboard that is connected between each account and game so users can brag about how great they
-        are at our games. We hope you enjoy and make the most out of your say here!
+        scores for each game so users can brag about how great they are at our games. We hope you enjoy 
+        and make the most out of your say here!
     </p1>
     </div>
 </div>
