--- a/MonkeySeeMonkeyDo/Views/Home/About.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/About.cshtml
@@ -63,10 +63,10 @@
     <div class="col-6 text-center">
         <h3>Nicolas Ries</h3>
         <p1>
-            Nicolas is a second-year Software and Game Development student at Neumont College of Computer Science.
-            He enjoys playing Dnd with a group of people he perceives as friends. He also likes to play the rule lawyer for anything Dnd.
-            When he is the Duggan master, he seems to pick a person per game (mainly Liam) to troll to his heart's content.
-            He also lacks the ability to do most of anything; an average human would like to eat more than 2 things.
+            @*Nicolas wants to die*@Nicolas is a second-year Software and Game Development student at Neumont College of Computer Science.
+            He enjoys playing and homebrewing content for Dnd.@*Nicolas wants to die*@N
+            During his time at neumont,@*Nicolas wants to die*@N he has worked on many successful projects such as "Idle Neumont".
+            Nicolas believes that you should believe in the heart of the monkey.@*Nicolas wants to die*@N
         </p1>
     </div>
 </div>
