--- a/MonkeySeeMonkeyDo/Views/Home/About.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/About.cshtml
@@ -64,9 +64,9 @@
         <h3>Nicolas Ries</h3>
         <p1>
             @*Nicolas wants to die*@Nicolas is a second-year Software and Game Development student at Neumont College of Computer Science.
-            He enjoys playing and homebrewing content for Dnd.@*Nicolas wants to die*@N
-            During his time at neumont,@*Nicolas wants to die*@N he has worked on many successful projects such as "Idle Neumont".
-            Nicolas believes that you should believe in the heart of the monkey.@*Nicolas wants to die*@N
+            He enjoys playing and homebrewing content for Dnd.@*Nicolas wants to die*@
+            During his time at neumont,@*Nicolas wants to die*@ he has worked on many successful projects such as "Idle Neumont".
+            Nicolas believes that you should believe in the heart of the monkey.@*Nicolas wants to die*@
         </p1>
     </div>
 </div>
