Got rid of Account page and fixed about me

--- a/MonkeySeeMonkeyDo/Views/Home/About.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/About.cshtml
@@ -51,11 +51,11 @@
     <div class="col-6 text-center">
         <h3>Logan Bailey</h3>
         <p1>
-            Logan is a second year BSGD student at Neumont College of Computer Science.
-            Over the course of his time at Neumont, he has created many friends, and just as many functional games.
-            He curently is working as an RA for Neumont, and he loves his job very much. He never complains about it at all. It is his dream job.
-            He is dropping out of College to be a College RA.
-            He likes playing Dnd in his free time so that he can murder children. He is funny monkey man.
+            Logan is a second-year BSGD student at Neumont College of Computer Science. 
+            Throughout his time at Neumont, he has met many people and strives to leave a good impression on everyone he meets. 
+            He also is a student worker for Numont as an Activities worker and RA. He enjoys playing video games or having a good Dnd session in his free time. 
+            After college, Logan hopes to join a game company to create real-time strategy games, one of his more enjoyed genres of games.
+
         </p1>
     </div>
 </div>
