--- a/MonkeySeeMonkeyDo/Views/Home/About.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/About.cshtml
@@ -67,6 +67,7 @@
             He enjoys playing and homebrewing content for Dnd.@*Nicolas wants to die*@
             During his time at neumont,@*Nicolas wants to die*@ he has worked on many successful projects such as "Idle Neumont".
             Nicolas believes that you should believe in the heart of the monkey.@*Nicolas wants to die*@
+            After College, Nicolas hopes to work on many of the game series he grew up with, such as pokemon
         </p1>
     </div>
 </div>
