--- a/MonkeySeeMonkeyDo/Views/Home/About.cshtml
+++ b/MonkeySeeMonkeyDo/Views/Home/About.cshtml
@@ -66,8 +66,7 @@
             @*Nicolas wants to die*@Nicolas is a second-year Software and Game Development student at Neumont College of Computer Science.
             He enjoys playing and homebrewing content for Dnd.@*Nicolas wants to die*@
             During his time at neumont,@*Nicolas wants to die*@ he has worked on many successful projects such as "Idle Neumont".
-            Nicolas believes that you should believe in the heart of the monkey.@*Nicolas wants to die*@
-            After College, Nicolas hopes to work on many of the game series he grew up with, such as pokemon
+            After College, Nicolas hopes to work on many of the game series he grew up with, such as pokemon. @*Nicolas wants to die*@
         </p1>
     </div>
 </div>
